clusters/non-prod/infra/traefik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-system
  labels:
    name: traefik-system
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: infrastructure
